--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Contact V5</title>
+	<title>Estimator data form</title>
 	<meta charset="UTF-8">
+	<meta name="description" content="Covid 19 estimator form">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
 	html {
