--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
 	<title>Contact V5</title>
 	<meta charset="UTF-8">
+	<meta name="description" content="Covid 19 estimator form" >
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
 	html {
