--- a/index.html
+++ b/index.html
@@ -3,11 +3,7 @@
 <head>
 	<title>Estimator data form</title>
 	<meta charset="UTF-8">
-<<<<<<< HEAD
 	<meta name="description" content="Covid 19 estimator new form" >
-=======
-	<meta name="description" content="Covid 19 estimator form">
->>>>>>> 34c8723eb8189cb080b4613e640645dabd6cf2f5
 	<meta name="viewport" content="width=device-width, initial-scale=1">
         <style type="text/css">
 	html {
@@ -198,7 +194,7 @@ button,select {
 	<script src="vendor/countdowntime/countdowntime.js"></script>
 <!--===============================================================================================-->
 	<script src="vendor/noui/nouislider.min.js"></script>
-	<script>
+<!-- 	<script>
 	    var filterBar = document.getElementById('filter-bar');
 
 	    noUiSlider.create(filterBar, {
@@ -220,7 +216,7 @@ button,select {
 	        $('.contact100-form-range-value input[name="from-value"]').val($('#value-lower').html());
 	        $('.contact100-form-range-value input[name="to-value"]').val($('#value-upper').html());
 	    });
-	</script>
+	</script>-->
 <!--===============================================================================================-->
 	<script src="js/main.js"></script>
 
