--- a/index.html
+++ b/index.html
@@ -94,22 +94,22 @@ button,select {
 
 				
 				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter your population">
-					<span class="label-input100">Population *</span>
+					<span class="label-input100"><label for="pop">Population *</label></span>
 					<input class="input100" type="text" id="pop" name="population" placeholder="Enter Your Population " data-population="" >
 				</div>
 
 				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Your Time to Elapse" data-time-to-elapse="">
-					<span class="label-input100">Time To Elapse *</span>
+					<span class="label-input100"> <label for="timeToElap">Time To Elapse *</label> </span>
 					<input class="input100" type="text" id="timeToElap" name="timeToElapse" placeholder="Enter Your Time to Elapse ">
 				</div>
 
 				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter your reported cases" data-reported-cases="">
-					<span class="label-input100">Reported Cases *</span>
+					<span class="label-input100"> <label for="repCase">Reported Cases *</label> Reported Cases *</span>
 					<input class="input100" type="text" id="repCase" name="reportedCases" placeholder="Enter Your no* of reported Cases ">
 				</div>
 
 				<div class="wrap-input100 validate-input bg1 rs1-wrap-input100" data-validate = "Enter Your total amount of Hospital Beds" data-total-hospital-beds="">
-					<span class="label-input100">Hospital Beds *</span>
+					<span class="label-input100"> <label for="hospBed">Hospital Beds *</label> </span>
 					<input class="input100" type="text" id="hospBed" name="HospitalBeds" placeholder="Enter total amount of Hospital Beds ">
 				</div>
 
@@ -124,7 +124,7 @@ button,select {
 							<option>weeks</option>
 							<option>months</option>
 						</select>
-						<div class="dropDownSelect2"></div>
+						<!--<div class="dropDownSelect2"></div>-->
 					</div>
 				</div>
 
