--- a/index.html
+++ b/index.html
@@ -489,7 +489,18 @@ input.input100 {
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-23581568-13"></script>
- <!--<script>
+<script src="js/fontfaceobserver.js" type="text/javascript"></script>
+<script type="text/javascript">
+  const pacificoObserver = new FontFaceObserver('FontAwesome');
+  //const robotoObserver = new FontFaceObserver('Roboto');
+  Promise.all([
+    pacificoObserver.load(),
+  ]).then(function(){
+    document.documentElement.className += " fonts-loaded";
+  });
+</script>
+<body> 
+<!--<script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
