fixed more issues from lighthouse

--- a/index.html
+++ b/index.html
@@ -334,6 +334,7 @@ input.input100 {
   font-family: Material-Design-Iconic-Font;
   font-size: 18px;
   color: #555555;
+  font-display: swap;
 }
 
 
@@ -350,7 +351,7 @@ input.input100 {
 <!--===============================================================================================-->
 	<link rel="preload" type="text/css" href="vendor/animate/animate.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <!--===============================================================================================-->
-	<link rel="preload" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<!--<link rel="preload" type="text/css" href="vendor/css-hamburgers/hamburgers.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">-->
 <!--===============================================================================================-->
 	<link rel="preload" type="text/css" href="vendor/animsition/css/animsition.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <!--===============================================================================================-->
@@ -358,7 +359,7 @@ input.input100 {
 <!--===============================================================================================-->
 	<link rel="preload" type="text/css" href="vendor/daterangepicker/daterangepicker.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <!--===============================================================================================-->
-	<link rel="preload" type="text/css" href="vendor/noui/nouislider.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<!--<link rel="preload" type="text/css" href="vendor/noui/nouislider.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">-->
 <!--===============================================================================================-->
 	<link rel="preload" href="css/util.css" type="text/css" as="style" onload="this.onload=null;this.rel='stylesheet'" >
 	<link rel="preload" type="text/css" href="css/main.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
