--- a/index.html
+++ b/index.html
@@ -343,7 +343,7 @@ input.input100 {
 <!--===============================================================================================-->
 	<link rel="icon" type="image/png" href="images/icons/favicon.ico"/>
 <!--===============================================================================================-->
-	<link rel="preload" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<!--<link rel="preload" type="text/css" href="vendor/bootstrap/css/bootstrap.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">-->
 <!--===============================================================================================-->
 	<link rel="preload" type="text/css" href="fonts/font-awesome-4.7.0/css/font-awesome.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <!--===============================================================================================-->
@@ -357,7 +357,7 @@ input.input100 {
 <!--===============================================================================================-->
 	<link rel="preload" type="text/css" href="vendor/select2/select2.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
 <!--===============================================================================================-->
-	<link rel="preload" type="text/css" href="vendor/daterangepicker/daterangepicker.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+	<!--<link rel="preload" type="text/css" href="vendor/daterangepicker/daterangepicker.css" as="style" onload="this.onload=null;this.rel='stylesheet'">-->
 <!--===============================================================================================-->
 	<!--<link rel="preload" type="text/css" href="vendor/noui/nouislider.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">-->
 <!--===============================================================================================-->
